# IELTS-LMS

./: .dockerignore  .env.example  .gitignore  .prettierrc  .tsbuildinfo  Dockerfile  Protoc.md  RAILWAY_DEPLOYMENT.md  README.md  context.md  eslint.config.js  exambuilder.md  managment.md  metadata.json  package-lock.json  package.json  playwright.config.ts  playwright.prod-load.config.ts  playwright.prod-smoke.config.ts  railway.json  studentexam.md  test-mysql-lifecycle.cjs  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.storybook/: main.ts
backend/: .env.example  Dockerfile  clear_db.rs  docker-compose.yml  railway.json
backend/crates/api/: Cargo.toml
backend/crates/api/src/: frontend.rs  lib.rs  live_updates.rs  router.rs  runtime_auto_advance.rs  state.rs
backend/crates/api/src/http/: auth.rs  rate_limit.rs  response.rs  server_busy.rs
backend/crates/api/src/routes/: auth.rs  exams.rs  grading.rs  proctor.rs  results.rs  schedules.rs  student.rs  ws.rs
backend/crates/application/: Cargo.toml
backend/crates/application/src/: auth.rs  builder.rs  delivery.rs  grading.rs  lib.rs  library.rs  media.rs  proctoring.rs  results.rs  scheduling.rs  validation.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: attempt.rs  auth.rs  exam.rs  grading.rs  library.rs  schedule.rs
backend/crates/infrastructure/: Cargo.toml
backend/crates/infrastructure/src/: actor_context.rs  auth.rs  authorization.rs  cache.rs  config.rs  database_monitor.rs  idempotency.rs  lib.rs  live_mode.rs  migrations.rs  outbox.rs  pool.rs  rate_limit.rs  telemetry.rs  tx.rs
backend/crates/worker/: Cargo.toml
backend/crates/worker/src/: main.rs
backend/crates/worker/src/jobs/: media.rs  outbox.rs  retention.rs
backend/crates/worker/tests/: retention_smoke.rs
backend/migrations/: 0001_roles.sql  0002_rls_helpers.sql  0003_exam_core.sql  0004_library_and_defaults.sql  0005_scheduling_and_access.sql  0006_delivery.sql  0007_proctoring.sql  0008_grading_results.sql  0009_media_cache_outbox.sql  0010_auth_security.sql  0011_outbox_notify_trigger.sql  0012_registration_fields.sql  0014_student_attempt_presence.sql  0015_operation_write_hardening.sql  0016_attempt_mutation_id_uniqueness.sql  0018_exam_day_concurrency_hardening.sql
backend/tests/: frontend_static.rs
docs/: feature-documentation.md
docs/allium/: exam-builder-roundtrip.allium
e2e/: admin-media.spec.ts  admin-users.spec.ts  admin-workflow.spec.ts  audit-log-verification.spec.ts  browser-compatibility.spec.ts  concurrent-users.spec.ts  error-recovery.spec.ts  exam-lifecycle-with-mysql.spec.ts  full-lifecycle.spec.ts  global-setup.ts  proctor-alerts.spec.ts  proctor-live-mode.spec.ts  proctor-student-interventions.spec.ts  proctor-violation-rules.spec.ts  proctor-workflow.spec.ts  remote-global-setup.ts  smoke.spec.ts  student-input-durability.spec.ts  student-ipad-layout.spec.ts  student-network.spec.ts  student-precheck.spec.ts  student-security.spec.ts  student-timer.spec.ts  student-workflow.spec.ts
e2e/prod-data/: prod-creds.example.json  prod-target.json
e2e/prod-load/: 00-control-plane.spec.ts  05-student-entry-smoke.spec.ts  10-student-shard.spec.ts  README.md
e2e/support/: backendE2e.ts  prodBootstrap.ts  prodData.ts  prodOrchestration.ts  studentUi.ts
k6/: README.md  prod-auto-submit-200.js  prod-exam-day.js  prod-load-helpers.js  prod-resume-100.js  prod-section-transition-200.js  prod-start-exam-200.js  prod-submit-storm-200.js
playwright-report/: index.html
src/: App.tsx  index.css  main.tsx  types.ts
src/app/api/: apiClient.ts
src/components/: AppShell.tsx  CommandPalette.tsx  ConfirmModal.tsx  GlobalToast.tsx  Header.tsx  PromptTemplateLibrary.tsx  QuestionBuilderPane.tsx  Sidebar.tsx  StimulusImageEditor.tsx  StimulusPane.tsx  Workspace.tsx  WritingTaskPanel.tsx
src/constants/: examDefaults.ts  uiConstants.ts
src/hooks/: useFilters.ts  useFocusTrap.ts  useKeyboardShortcuts.ts  useUndoRedo.ts
src/routes/: index.tsx
src/services/: adminPreferencesRepository.ts  authService.ts  backendBridge.ts  developmentFixtures.ts  examAdapterService.ts  examDeliveryService.ts  examLifecycleService.ts  examRepository.ts  gradingRepository.ts  gradingService.ts  passageLibraryService.ts  questionBankService.ts  studentAttemptNormalization.ts  studentAttemptRepository.ts  studentAuditService.ts  studentIntegrityService.ts
src/store/: useAuthStore.ts  useUIStore.ts
src/stories/: Banner.stories.tsx  Button.stories.tsx  DataTable.stories.tsx  Dialog.stories.tsx  Input.stories.tsx  Select.stories.tsx  Textarea.stories.tsx  Toast.stories.tsx
src/test/: developmentEnvironment.test.ts  setup.ts
src/types/: domain.ts  grading.ts  studentAttempt.ts  utility.ts
src/utils/: academicSampleExam.ts  acceptedAnswers.ts  audioUrl.ts  blankPlaceholders.ts  boldMarkdown.ts  builderEnhancements.ts  csvExport.ts  deviceFingerprinting.ts  examIdCollisionCheck.ts  examStats.ts  examTextExport.ts  examUtils.ts  gradingSeedData.ts  htmlText.ts  imageUrl.ts  logger.ts  scheduleUtils.ts  studentObservability.ts  subAnswerTree.ts  subAnswerTreeSlots.ts  tableCompletion.ts  ttlLruCache.ts  validationHelpers.ts  validationUtils.ts  versionUtils.ts  writingTaskUtils.ts
test-results/: .last-run.json
test-results/admin-workflow-Admin-Workf-0f817-xams-view-and-see-exam-list-webkit/: error-context.md
test-results/admin-workflow-Admin-Workf-146e1-n-access-exam-creation-flow-chromium/: error-context.md
(+354 files in other folders)
