[package]
name = "ielts-backend-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
ielts-backend-application = { path = "../application" }
ielts-backend-domain = { path = "../domain" }
ielts-backend-infrastructure = { path = "../infrastructure" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
tokio = { version = "1.42.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5.2", features = ["limit", "util"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
futures-util = "0.3.31"
serde_json = "1.0.133"
tokio-tungstenite = "0.24.0"

[[test]]
name = "builder_contract"
path = "../../tests/contracts/builder_contract.rs"

[[test]]
name = "scheduling_contract"
path = "../../tests/contracts/scheduling_contract.rs"

[[test]]
name = "student_contract"
path = "../../tests/contracts/student_contract.rs"

[[test]]
name = "proctor_contract"
path = "../../tests/contracts/proctor_contract.rs"

[[test]]
name = "grading_contract"
path = "../../tests/contracts/grading_contract.rs"

[[test]]
name = "auth_contract"
path = "../../tests/contracts/auth_contract.rs"

[[test]]
name = "frontend_static"
path = "../../tests/frontend_static.rs"
