[package]
name = "ielts-backend-application"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
publish = false

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
ielts-backend-domain = { path = "../domain", features = ["sqlx"] }
ielts-backend-infrastructure = { path = "../infrastructure" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls", "uuid", "chrono"] }
thiserror = "1.0.69"
tracing = "0.1.41"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "time"] }
axum = { version = "0.7.9", features = ["ws"] }

[[test]]
name = "mutation_replay"
path = "../../tests/integration/mutation_replay.rs"
