[package]
name = "ielts-backend-infrastructure"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
hex = "0.4.3"
hmac = "0.12.1"
ielts-backend-domain = { path = "../domain", features = ["sqlx"] }
opentelemetry = "0.27.1"
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
prometheus-client = "0.22.3"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls", "uuid", "chrono"] }
subtle = "2.6.1"
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tokio = { version = "1.42.0", features = ["sync", "time"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "registry"] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "time"] }
axum = { version = "0.7.9", features = ["ws"] }

[[test]]
name = "rls_smoke"
path = "../../tests/integration/rls_smoke.rs"

[[test]]
name = "idempotency_smoke"
path = "../../tests/integration/idempotency_smoke.rs"

[[test]]
name = "outbox_smoke"
path = "../../tests/integration/outbox_smoke.rs"
