[package]
name = "ielts-backend-worker"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false

[dependencies]
ielts-backend-infrastructure = { path = "../infrastructure" }
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
ielts-backend-domain = { path = "../domain" }
uuid = { version = "1.11.0", features = ["v4"] }
